feat: added fonts

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -241,6 +241,15 @@ http://ionicframework.com/docs/theming/ */
   }
 }
 
+@font-face {
+  font-family: "urduFont";
+  src: url("../assets/NotoNastaliqUrdu-Regular.ttf");
+}
+
+ion-label {
+  font-family: "urduFont";
+}
+
 ion-grid {
   padding: var(
     --ion-grid-padding-xs
