--- a/src/components/NewsCard/cards.module.css
+++ b/src/components/NewsCard/cards.module.css
@@ -2,22 +2,27 @@
   height: 300px;
 }
 .header {
-  font-size: 15px;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-  max-height: 3em; /* Adjust the height for two lines (2 * line-height) */
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.shortSummary {
   font-size: 12px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
-  max-height: 3em; /* Adjust the height for two lines (2 * line-height) */
+  /* max-height: 3em; */
+  line-height: 21px;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-family: "urduFont";
+  padding-top: 5px;
+  padding-bottom: 15px;
+}
+.shortSummary {
+  font-size: 10px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  line-height: 21px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: "urduFont";
 }
 .image {
   height: 130px;
@@ -25,16 +30,19 @@
 }
 .channelName {
   font-size: 10px;
+  font-family: "urduFont";
 }
 .cardFooter {
   /* justify-content: space-between !important; */
   /* border: 2px solid blue; */
-  margin-top: 20px;
+  /* margin-top: 20px; */
   width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-wrap: nowrap;
   align-content: center;
+  min-height: 60px;
+  max-height: 60px;
   /* height: 50px; */
 }
