--- a/src/components/NewsCard/cards.module.css
+++ b/src/components/NewsCard/cards.module.css
@@ -13,12 +13,14 @@
   font-family: "urduFont";
   padding-top: 5px;
   padding-bottom: 15px;
+  height: 50px;
 }
 .shortSummary {
   font-size: 10px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+  height: 42px;
   line-height: 21px;
   overflow: hidden;
   text-overflow: ellipsis;
