--- a/src/components/NewsCard/cards.module.css
+++ b/src/components/NewsCard/cards.module.css
@@ -14,6 +14,7 @@
   padding-top: 5px;
   padding-bottom: 15px;
   height: 50px;
+  text-align: end;
 }
 .shortSummary {
   font-size: 10px;
@@ -25,6 +26,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   font-family: "urduFont";
+  text-align: end;
 }
 .image {
   height: 130px;
