--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,3 +1,5 @@
+/** @format */
+
 .headerlogo {
   height: 40px;
   width: auto;
@@ -9,4 +11,8 @@
 .channelLogos {
   height: 50px;
   width: 50px;
+}
+
+ion-icon {
+  padding: 15px 15px 15px 15px !important;
 }
