--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -89,6 +89,7 @@ http://ionicframework.com/docs/theming/ */
    */
 
 body.dark {
+  --ion-toolbar-background: #000000;
   --ion-color-primary: green;
   --ion-color-primary-rgb: 66, 140, 255;
   --ion-color-primary-contrast: #ffffff;
@@ -258,9 +259,9 @@ ion-grid {
   color: green;
 }
 
-.segment-button-checked::part(native) {
+/* .segment-button-checked::part(native) {
   color: white;
-}
+} */
 ion-segment-button {
   --indicator-color: green;
 }
