--- a/src/components/NewsCard/cards.module.css
+++ b/src/components/NewsCard/cards.module.css
@@ -1,5 +1,7 @@
+/** @format */
+
 .cards {
-  height: 300px;
+  height: 310px;
 }
 .cardsmobile {
   height: 100%;
@@ -60,33 +62,48 @@
   height: "5%";
   width: "20%";
 }
+.ionIcon {
+  width: 20px;
+  height: 20px;
+}
+.ionIosIconSave {
+  width: 23px;
+  height: 23px;
+  margin-bottom: 4px;
+}
 .imageShimmer {
-  height: 130px;
-  width: 100%;
   background-color: #dee2e7;
 }
-
-.headerShimmer {
+.headerTitleShimmer {
+  height: 25px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
-  padding-bottom: 15px;
-  height: 20px;
-  text-align: end;
+  background-color: #dee2e7;
+  margin-top: 15px;
   border-radius: 5px;
-
-  background-color: #dee2e7;
+  margin-left: 10px;
+  margin-right: 10px;
 }
-
 .shortSummaryShimmer {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-  height: 20px;
-  background-color: #dee2e7;
+  margin-top: 0px;
 }
-.channelNameShimmer {
-  padding-left: 4px;
+.cardFooterShimmer {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.channelIconShimmer {
   background-color: #dee2e7;
-  width: 14px;
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
+}
+
+.channelNameShimmer {
+  margin-left: 8px;
+  background-color: #dee2e7;
+  width: 40px;
+  border-radius: 5px;
 }
